--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -11,3 +11,9 @@ set(Torch_DIR, "libtorch")
 find_package(Torch REQUIRED)
 # set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} ${TORCH_CXX_FLAGS}")
 
+add_subdirectory(./starter st)
+
+add_subdirectory(./basics bs)
+add_subdirectory(./intermediate im)
+add_subdirectory(./advanced ad)
+add_subdirectory(./interactive ia)
