feat: logistic_regression

--- a/basics/CMakeLists.txt
+++ b/basics/CMakeLists.txt
@@ -4,3 +4,6 @@ target_link_libraries(basics "${TORCH_LIBRARIES}")
 
 add_executable(linear_regression linear_regression.cpp)
 target_link_libraries(linear_regression "${TORCH_LIBRARIES}")
+
+add_executable(logistic_regression logistic_regression.cpp)
+target_link_libraries(logistic_regression "${TORCH_LIBRARIES}")
