--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,7 +3,7 @@ cmake_minimum_required(VERSION 3.10 FATAL_ERROR)
 set(CMAKE_CXX_STANDARD 20)
 set(CMAKE_CXX_STANDARD_REQUIRED ON)
 
-project(studies-pytorch LANGUAGES CXX VERSION 0.0.1)
+project(studies-ml LANGUAGES CXX VERSION 0.0.1)
 
 list(APPEND CMAKE_PREFIX_PATH "libtorch")
 set(Torch_DIR, "libtorch")
